Fix legend key alignment with new font

--- a/css/main.css
+++ b/css/main.css
@@ -48,5 +48,5 @@ footer article {
 	border: 1px solid black;
 	float: left;
 	margin-right: .5em;
-	margin-top: 0.1em;
+	margin-top: .4em;
 }
